src/state/block.h

struct block;
struct block *
block_create();
char *
block_str(struct block *);
struct error;
struct value;
struct ast_expr;
struct heap;
struct state;
struct location;
struct state;
void
block_undeclare(struct block *, struct state *);
struct block_arr;
struct block_arr *
block_arr_create();
void
block_arr_destroy(struct block_arr *);
struct block_arr *
block_arr_copy(struct block_arr *);
struct block **
block_arr_blocks(struct block_arr *);
int
block_arr_nblocks(struct block_arr *);
/* block_arr_append: Append struct block to array and return index (address). */
int
block_arr_append(struct block_arr *, struct block *);