src/state/value.h

struct value;
struct location;
struct value *
value_copy(struct value *);
void
value_destroy(struct value *);
char *
value_str(struct value *);