src/0v/state/location.h

struct ast_expr;
struct location;
struct location *
location_create_dynamic(int block, struct ast_expr *offset);
void
location_destroy(struct location *);
struct heap;
struct heap;
struct state;
struct vconst;
struct block;